--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,6 @@
 tasks:
   - name: aws-cli
+    before: echo "hello"
     env:
       AWS_CLI_AUTO_PROMPT: on-partial
     init: |
@@ -14,7 +15,6 @@ tasks:
       echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" |sudo tee  /etc/apt/sources.list.d/pgdg.list
       sudo apt update
       sudo apt install -y postgresql-client-13 libpq-dev      
-
 vscode:
   extensions:
     - 42Crunch.vscode-openapi
