--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,8 +1,11 @@
 # List the start up tasks. Learn more: https://www.gitpod.io/docs/configure/workspaces/tasks
 tasks:
-  - name: Script Task
-    init: echo 'init script' # runs during prebuild => https://www.gitpod.io/docs/configure/projects/prebuilds
-    command: echo 'start script'
+  - name: aws-cli
+    before: echo "Installing AWS CLI"
+    env:
+         AWS_CLI_AUTO_PROMPT: on-partial
+    init: sudo ./aws/install # runs during prebuild => https://www.gitpod.io/docs/configure/projects/prebuilds
+    command: cd $THEIA_WORKSPACE_ROOT
 
 # List the ports to expose. Learn more: https://www.gitpod.io/docs/configure/workspaces/ports
 ports:
