--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,10 +2,8 @@
 tasks:
   - name: aws-cli
     before: echo "Installing AWS CLI"
-    env:
-         AWS_CLI_AUTO_PROMPT: on-partial
     init: sudo ./aws/install # runs during prebuild => https://www.gitpod.io/docs/configure/projects/prebuilds
-    command: cd $THEIA_WORKSPACE_ROOT
+    command: cd /workspace
 
 # List the ports to expose. Learn more: https://www.gitpod.io/docs/configure/workspaces/ports
 ports:
