--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,10 +1,7 @@
 tasks:
-  - name: awscli
-    init: cd /workspace
-  - name: task24
-    init: echo "hello world"
-  - name: task24
-    init: sudo ./aws/install
+  - init: cd /workspace
+  - init: echo "hello world"
+  - init: sudo ./aws/install
 # List the ports to expose. Learn more: https://www.gitpod.io/docs/configure/workspaces/ports
 ports:
   - name: Frontend
