add ports to gitpod.yaml

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -18,4 +18,21 @@ tasks:
 vscode:
   extensions:
    - 42crunch.vscode-openapi
+ports:
+  - port: 3000
+    onOpen: open-browser
+    name: DynamoDB
+    description: Database DynamoDB
+  - port: 8000
+    onOpen: open-browser
+    name: FrontEnd
+    description: FrontEnd Flask site
+  - port: 4567
+    onOpen: open-browser
+    name: BackEnd
+    description: BackEnd Flask site
+  - port: 5432
+    onOpen: open-browser
+    name: Postgres
+    description: Database Postgress 
     
