--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,20 +1,12 @@
+image:
+  file: .gitpod.Dockerfile
+
 tasks:
 - name: npmbackend 
   init: |
     cd frontend-react-js/
     npm install
-- name: postgres 
-  init: |
-    cd $THEIA_WORKSPACE_ROOT
-    curl -fsSL https://www.postgresql.org/media/keys/ACCC4CF8.asc|sudo gpg --dearmor -o /etc/apt/trusted.gpg.d/postgresql.gpg
-    echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" |sudo tee  /etc/apt/sources.list.d/pgdg.list
-    sudo apt update
-    sudo apt install -y postgresql-client-13 libpq-dev
-- name: aws-cli
-  env:
-   AWS_CLI_AUTO_PROMPT: on-partial
-  init: |
-    sudo ./aws/install
+
 vscode:
   extensions:
    - 42crunch.vscode-openapi
