backend and cognito

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
       AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
       ROLLBAR_ACCESS_TOKEN: "${ROLLBAR_ACCESS_TOKEN}"
+      AWS_COGNITO_USER_POOL_ID: "ca-central-1_c0UsCB9q7"
+      AWS_COGNITO_USER_POOL_CLIENT_ID: "280sao97ib3vb7jru9i1hpddrd"
 
     build: ./backend-flask
     ports:
