--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -12,7 +12,7 @@ tasks:
     sudo apt install -y postgresql-client-13 libpq-dev
   command:
     export GITPOD_IP=$(curl ifconfig.me)
-    source "$THEIA_WORKSPACE_ROOT/backend-flask/rds-update-sg-rule"
+    source "$THEIA_WORKSPACE_ROOT/backend-flask/bin/rds-update-sg-rule"
 
 - name: aws-cli
   env:
@@ -43,4 +43,6 @@ ports:
     name: Postgres
     visibility: public
     description: Database Postgress 
-    
+
+
+    # endfile
