--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -10,9 +10,9 @@ tasks:
     echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" |sudo tee  /etc/apt/sources.list.d/pgdg.list
     sudo apt update
     sudo apt install -y postgresql-client-13 libpq-dev
-  command:
+  command: |
     export GITPOD_IP=$(curl ifconfig.me)
-    source "$THEIA_WORKSPACE_ROOT/backend-flask/bin/rds-update-sg-rule"
+    source  "$THEIA_WORKSPACE_ROOT/backend-flask/bin/rds-update-sg-rule"
 
 - name: aws-cli
   env:
